# dockermancer

./: .editorconfig  .env  .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  config.dist.toml  config.toml  pyproject.toml
core/: config.py  logging.py  main.py
core/agent/: chat.py  dialogue.py  docker.py
core/share/: __init__.py  msg.py
